# The-Reverse-Turing-Test

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.backend  README.md  docker-compose.yml  docker-entrypoint.sh  extract-image.js  mimicGenertate.json  n8n-setup.md  n8n-workflow.json  nginx.conf  ss  supervisord.conf
.github/workflows/: deploy-modelscope.yml  sync-frontend-to-modelscope.yml  (+1 more)
backend/: .dockerignore  .env  .env.example  Cargo.toml  Dockerfile  Dockerfile.dev  WS_PHASE_PROTOCOL.md  docker-entrypoint.sh  entrypoint.sh  nginx.conf  schema.sql  supervisord.conf
backend/src/: config.rs  main.rs
backend/src/db/: mod.rs
backend/src/models/: ai_task.rs  drawing.rs  drawing_item_row.rs  mod.rs  room.rs  single_player.rs  theme.rs  user.rs
backend/src/routes/: auth.rs  dev_auth.rs  drawings.rs  game.rs  mod.rs  n8n_callback.rs  rooms.rs  themes.rs
backend/src/services/: auth.rs  game_logic.rs  image_store.rs  mod.rs  n8n_client.rs  preset_fish.rs  room_manager.rs
backend/src/services/fish_base64/: fish_0.txt  fish_1.txt  fish_2.txt  fish_3.txt  fish_4.txt  fish_5.txt  fish_6.txt  fish_7.txt  fish_8.txt
backend/src/ws/: game_rules.rs  messages.rs  mod.rs  socketio_handler.rs
frontend/: .dockerignore  .env  .env.example  DEPLOY_MODELSCOPE.md  Dockerfile  Dockerfile.modelscope  README.md  docker-compose.yml  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.tsbuildinfo
scripts/: backup.sh  deploy-modelscope.sh  generate-review-note.sh  healthcheck.sh  install-cron.sh  restore.sh  verify.sh
(+156 files in other folders)
